css/main.css
/* General Comments */

body {
    width: 90%;
}

.content-wrapper {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column wrap;

}

button {
    background-color: brown;
    color: antiquewhite;
    text-decoration: underline;
}

/* First Part */
.first-part {
    width: 90%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    background-color: #99d6ff;
}

button.donate {
    align-self: flex-end;
    width: 30%;
    
}

h1 {
    width: 100%;
    text-align: center;
}

.first-part img {
    width: 90%;
}

.first-part p {
    width: 100%;
    text-align: center;
    padding: 0 10px;
}

img {
    width: 20%;
}

p.adopt { 
    padding-bottom: 20px;
    text-align: center;
    font-size: 20px;
}

/* Programs */

.second-part {
      width: 90%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    margin-top: 40px;
    border-top: #99d6ff dotted 20px;
}

.second-part h2 {
    font-size: 40px;
    text-align: center;
}

.second-part img {
    width: 90%;
}

.second-part img.blanket {
    margin-top: 20px;
}

.second-part button {
    margin-bottom: 20px;
}

